# rfp-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  cosmos.py  docker-compose.yml  main.py  pyproject.toml  session_manager.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: Chat.tsx  InputBar.tsx  MessageBubble.tsx  MessageList.tsx  Providers.tsx  ToolIndicator.tsx
frontend/src/lib/: api.ts  auth.ts  session.ts  sse.ts  types.ts
infra/: deploy.sh
session-container/: Dockerfile  agent.py  pyproject.toml  server.py
