[project]
name = "rfp-session"
version = "0.1.0"
description = "Session container for RFP agent — one instance per user"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.2",
    "fastapi>=0.133.0",
    "github-copilot-sdk>=0.1.25",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.41.0",
]
